# Diploma_IU7_2026

./: .gitignore  .gitmodules  Dockerfile.app  Dockerfile.tests  README.md  docker-compose.yml
.github/workflows/: ci.yml
Notes/: .gitignore  1.md  CMakeLists.txt  Dockerfile  Dockerfile.app  Dockerfile.e2e  Dockerfile.tests  Makefile  algos.drawio  app  app.db  architecture.drawio  cases.md  compare_dlp.ods  compare_usb.ods  config.txt  database_creator.sql  docker-compose.yml  libs.md  openapi.yaml  run-tests.sh  uml.puml  методы открытия интерфейса.md  фоновые процессы.md
Notes/api-stubs/: main-api-server.cpp
Notes/api-stubs/api/: ApiBase.h  DefaultApi.cpp  DefaultApi.h
Notes/docs/: 1.md  architecture.drawio  compare_usb.html  compare_usb.ods  database.puml  openapi.yaml  uml.puml  usecases.puml  методы открытия интерфейса.md  фоновые процессы.md
Notes/done_solutions/: CleverControl.md  FalcongazeSecureTower.md  GardaDLP.md  GilisoftUSBLock.md  InfoWatchDeviceMonitor.md  InterGuard.md  LanAgent.md  NetSoftwaresUSBBlock.md  SearchInformDeviceController.md  SolarDozor.md  StaffCopEnterprise.md  SysToolsUSBBlocker.md  ZecurionDLP.md  КиберПротего.md  СпрутМонитор.md  Стахановец.md
Notes/mydlp-front/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
Notes/mydlp-front/src/: App.vue
Notes/mydlp-front/src/__tests__/: ListHeader.spec.ts  ListRow.spec.ts  WhitelistView.spec.ts
Notes/mydlp-front/src/api/: api.ts
Notes/mydlp-front/src/assets/styles/: main.scss
Notes/mydlp-front/src/components/: AppContainer.vue  BaseButton.vue  ListHeader.vue  ListRow.vue
Notes/mydlp-front/src/models/: Device.ts  DeviceInfo.ts  TableColumn.ts  WhitelistDevice.ts
Notes/mydlp-front/src/router/: index.ts
Notes/mydlp-front/src/services/: ModeConverter.ts
Notes/mydlp-front/src/stores/: device.store.ts
Notes/mydlp-front/src/views/: ListView.vue  WhitelistView.vue
Notes/report/: biblio.bib  bmstu-LOCAL.cls  preamble.tex  report.bcf-SAVE-ERROR  report.tex
Notes/report/inc/lst/: MountRecoveryService.hpp  handleEvent.cpp  handleEvent2.cpp  main.cpp  main2.cpp  main3.cpp  mount.cpp  systemd  umount.cpp  usb-ui  usb-ui2
Notes/report/parts/: 00-referat.tex  01-introd.tex  02-analysis.tex  03-construct.tex  04-techno.tex  05-research.tex  06-conclusion.tex  07-add.tex
Notes/research/: plot_research1.py  plot_research2.py  research1.csv  research2.csv
Notes/scripts/: run-tests.sh  wait-for-app.sh
Notes/sql/schema/: 001_create_device.sql  001_device_info.sql  003_mount_record.sql
Notes/src/: HttpServer.hpp  main.cpp
Notes/src/commands/: Command.hpp  CommandContext.hpp  DeviceCommands.hpp  LogCommands.hpp  ProcessCommands.hpp
Notes/src/core/: DeviceControlService.hpp  DeviceInfo.hpp  EventLoop.hpp  EventQueue.hpp  IDeviceResolver.hpp  IMountSystem.hpp  LinuxMountSystem.hpp  MountRecoveryService.hpp  MountRegistry.hpp  MountService.hpp  MountUtils.hpp  UdevDeviceResolver.hpp  Watcher.hpp  Watchers.hpp
Notes/src/essenses/: Device.hpp  DeviceEvent.hpp  DeviceInfo.hpp  EventType.hpp  LogEventOption.hpp  MountEvent.hpp  MountRecord.hpp  Process.hpp  Record.hpp  SecurityEvent.hpp
Notes/src/facade/: Facade.hpp
Notes/src/managers/: DevLogger.hpp  DeviceManager.hpp  LogManager.hpp  MountManager.hpp  MountRegistry.hpp  PolicyManager.hpp  ProcessManager.hpp  SettingsManager.hpp
Notes/src/repositories/: DBConnection.hpp  DBInitializer.hpp  DeviceRepository.hpp  LogRepository.hpp  MountRepository.hpp  ProcessRepository.hpp
Notes/src/services/: Config.hpp  DBInitializer.hpp  DevLogger.hpp  DeviceEventNotifier.hpp  HttpServer.hpp  IWebSocketServer.hpp  JsonUtils.hpp  MountPointBuilder.hpp  WebSocketServer.hpp
Notes/tests/: CMakeLists.txt  test_mount_point_builder.cpp  test_mount_registry.cpp
Notes/tests/e2e/: test_get_whitelist.cpp
Notes/tests/helpers/: LoggerTestHelper.hpp  MountHelpers.hpp
Notes/tests/integration/: test_add_device_to_white_list_command.cpp  test_delete_device_command.cpp  test_device_repository.cpp  test_get_white_list_command.cpp  test_mount_registry.cpp  test_real_mount.cpp  test_white_list_command.cpp
Notes/tests/mocks/: MockDeviceResolver.hpp  MockMountSystem.hpp  MockWebSocketServer.hpp
Notes/tests/unit/: test_config.cpp  test_mount_point_builder.cpp  test_mount_registry.cpp  test_mount_utils.cpp
Notes/usb_solutions/: gilisoft.md  ratool.md  usbblock.md  usbfilter.md  usbfilterwindows.md  usbguard.md  usbschield.md  usbwall.md
api-stubs/api/: ApiBase.cpp  ApiBase.d  DefaultApi.d  DefaultApi.h
mydlp-front/: README.md  package-lock.json  vitest.config.ts
mydlp-front/src/: App.vue
mydlp-front/src/__tests__/: BaseButton.spec.ts  ListView.spec.ts  ModeConverter.spec.ts  device.store.spec.ts
mydlp-front/src/api/: api.ts  websocket.ts
mydlp-front/src/components/: ListRow.vue  PageTitle.vue
mydlp-front/src/models/: Device.ts  DeviceInfo.ts
mydlp-front/src/services/: ModeConverter.ts
report/: biblio.bib  bmstu-LOCAL.cls  bmstu-listing.sty  compress.sh  report.aux  report.bbl  report.bbl-SAVE-ERROR  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
report/parts/: 00-referat.aux  00-referat.tex  01-introd.aux  01-introd.tex  02-analysis.aux  02-analysis.tex  03-construct.aux  03-construct.tex  04-techno.aux  04-techno.tex  05-research.aux  05-research.tex  06-conclusion.aux  07-add.aux  07-add.tex
scripts/: run-tests.sh
sql/schema/: 001_device_info.sql  002_device.sql  003_mount_record.sql
src/: main.cpp  main.d
src/commands/: DeviceCommands.hpp
src/core/: DeviceControlService.hpp  EventLoop.hpp  EventQueue.hpp  MountService.hpp  MountUtils.hpp
src/essenses/: Device.hpp  DeviceInfo.hpp
src/facade/: Facade.hpp
src/services/: DBInitializer.hpp  DevLogger.hpp  Exceptions.hpp  HttpServer.hpp
tests/: CMakeLists.txt
tests/helpers/: ConfigFileBuilder.hpp  DataBaseTestHelper.hpp  E2EHelper.hpp
tests/integration/: test_device_repository.cpp  test_real_mount.cpp  test_white_list_command.cpp
tests/unit/: test_mount_point_builder.cpp  test_mount_utils.cpp
(+12 files in other folders)
